--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^26.1.0",
     "prettier": "3.5.3",
     "vite": "^6.3.1",
